src/math/math_TrigonometricFunctionRoots.cxx
@@ -25,66 +25,12 @@
 //#endif
 
 #include <math_TrigonometricFunctionRoots.hxx>
+#include <math_TrigonometricEquationFunction.hxx>
 #include <math_DirectPolynomialRoots.hxx>
 #include <Standard_OutOfRange.hxx>
 #include <math_FunctionWithDerivative.hxx>
 #include <math_NewtonFunctionRoot.hxx>
 #include <Precision.hxx>
-
-
-class MyTrigoFunction: public math_FunctionWithDerivative
-{
-  Standard_Real AA;
-  Standard_Real BB;
-  Standard_Real CC;
-  Standard_Real DD;
-  Standard_Real EE;
-
- public:
-  MyTrigoFunction(const Standard_Real A,
-                  const Standard_Real B,
-                  const Standard_Real C,
-                  const Standard_Real D,
-                  const Standard_Real E)
-  : AA(A), BB(B), CC(C), DD(D), EE(E)
-  {
-  }
-
-  Standard_Boolean Value(const Standard_Real X, Standard_Real& F);
-  Standard_Boolean Derivative(const Standard_Real X, Standard_Real& D);
-  Standard_Boolean Values(const Standard_Real X, Standard_Real& F, Standard_Real& D);
-};
-
- Standard_Boolean MyTrigoFunction::Value(const Standard_Real X, Standard_Real& F) {
-   Standard_Real CN= cos(X), SN = sin(X);
-   //-- F= AA*CN*CN+2*BB*CN*SN+CC*CN+DD*SN+EE;
-   F=CN*(AA*CN + (BB+BB)*SN + CC) + DD*SN + EE;
-   return Standard_True;
- }
-
- Standard_Boolean MyTrigoFunction::Derivative(const Standard_Real X, Standard_Real& D) {
-   Standard_Real CN= Cos(X), SN = Sin(X);
-   //-- D = -2*AA*CN*SN+2*BB*(CN*CN-SN*SN)-CC*SN+DD*CN;
-   D = -AA*CN*SN + BB*(CN*CN-SN*SN);
-   D+=D;
-   D-=CC*SN+DD*CN;
-   return Standard_True;
- }
-
- Standard_Boolean MyTrigoFunction::Values(const Standard_Real X, Standard_Real& F, Standard_Real& D) {
-   Standard_Real CN= Cos(X), SN = Sin(X);
-   //-- F= AA*CN*CN+2*BB*CN*SN+CC*CN+DD*SN+EE;
-   //-- D = -2*AA*CN*SN+2*BB*(CN*CN-SN*SN)-CC*SN+DD*CN;
-   Standard_Real AACN = AA*CN;
-   Standard_Real BBSN = BB*SN;
-
-   F = AACN*CN + BBSN*(CN+CN) + CC*CN + DD*SN + EE;
-   D = -AACN*SN + BB*(CN*CN+SN*SN);
-   D+=D;
-   D+=-CC*SN+DD*CN;
-   return Standard_True;
- }
-
 
 math_TrigonometricFunctionRoots::math_TrigonometricFunctionRoots
                                 (const Standard_Real theD,
@@ -474,7 +420,7 @@ void math_TrigonometricFunctionRoots::Perform(const Standard_Real A,
       // Appel de Newton:
       //OCC541(apo):  Standard_Real TetaNewton=0;  
       Standard_Real TetaNewton = Teta;  
-      MyTrigoFunction MyF(A, B, C, D, E);
+      math_TrigonometricEquationFunction MyF(A, B, C, D, E);
       math_NewtonFunctionRoot Resol(MyF, X, Tol1, Eps, Nit);
       if (Resol.IsDone()) {
 	TetaNewton = Resol.Root();
